Fix cropper aspect ratio

--- a/src/components/common/ImageCropper/ImageCropper.module.css
+++ b/src/components/common/ImageCropper/ImageCropper.module.css
@@ -1,14 +1,11 @@
 .container {
   width: 100%;
   height: 100%;
-  display: grid;
-  overflow: hidden;
+  display: flex;
 }
 
 .cropper {
   margin: auto;
-  width: 100%;
-  max-height: 100%;
   position: relative;
   overflow: hidden;
   user-select: none;
